# django-autocompleter

./: .gitignore  DEVELOPMENT.md  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
autocompleter/: __init__.py  apps.py  base.py  registry.py  settings.py  utils.py  views.py
autocompleter/management/commands/: autocompleter_init.py  reset_autocompleter_providers.py
test_project/test_app/: autocompleters.py
test_project/test_app/tests/: base.py  test_aliasing.py  test_exact.py  test_management_command.py  test_matching.py  test_perf.py  test_storage.py  test_utils.py  test_views.py
test_project/test_project/: settings.py
