[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-redis-autocompleter"
authors = [
    { name="Ara Anjargolian", email="ara818@gmail.com" },
    { name="Kevin Fox", email="kevin_fox@me.com" },
]
description = "A redis-backed autocompleter for Django projects."
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "autocompleter",
    "django"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "Django >=3.2.*, <4.0",
    "hiredis >= 1",
    "redis >= 3",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ycharts/django-autocompleter"
"Bug Tracker" = "https://github.com/ycharts/django-autocompleter/issues"

[tool.setuptools]
packages = [
    "autocompleter",
    "autocompleter.management",
    "autocompleter.management.commands",
]

[tool.setuptools.dynamic]
version = {attr = "autocompleter.VERSION"}
